--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="/img/icon.png"
       type="image/x-icon"
     />
-    <title>Trabajo Practico</title>
+    <title>Runas Vikingas</title>
   </head>
   <body>
     <h1>El Legado Ancestral de las Runas Vikingas</h1>
