--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       naturaleza, así como de la búsqueda eterna de conocimiento y sabiduría.
     </p>
     <img src="/img/2.jpg" alt="Viking Runes"><span><img src="/img/3.jpg" alt="Viking female"></span>
+
+    <h2>Raíces Antiguas</h2>
+    <p>El origen exacto de las runas vikingas es un tanto oscuro debido a la falta de registros escritos. Sin embargo, se cree que se desarrollaron a partir de sistemas de escritura aún más antiguos utilizados por las tribus germánicas y escandinavas. Algunos investigadores sugieren que las runas podrían tener sus raíces en alfabetos mediterráneos como el etrusco o el griego. El origen de las runas vikingas está envuelto en el misterio y la antigüedad, pero su legado perdura como un recordatorio tangible de la rica historia y la profunda espiritualidad de los antiguos pueblos germánicos y escandinavos.</p>
   </body>
   <footer>
     <p>© 2024 Runas Vikingas. Todos los derechos reservados.</p>
