--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="/img/icon.png"
+      href="./img/icon.png"
       type="image/x-icon"
     />
     <title>Runas Vikingas</title>
@@ -25,7 +25,7 @@
       rúnico consta de 24 caracteres, cada uno con su propio nombre y
       significado.
     </p>
-    <img src="/img/1.jpg" alt="Runes" />
+    <img src="./img/1.jpg" alt="Runes" />
     <h2>El Simbolismo Perdurable de las Runas Vikingas</h2>
     <p>Dentro de las Runas más comunes podemos encotrar las siguientes:</p>
     <ul>
@@ -42,7 +42,7 @@
       hoy. Siguen siendo un recordatorio de la conexión entre el hombre y la
       naturaleza, así como de la búsqueda eterna de conocimiento y sabiduría.
     </p>
-    <img src="/img/2.jpg" alt="Viking Runes"><span><img src="/img/3.jpg" alt="Viking female"></span>
+    <img src="./img/2.jpg" alt="Viking Runes"><span><img src="./img/3.jpg" alt="Viking female"></span>
 
     <h2>Raíces Antiguas</h2>
     <p>El origen exacto de las runas vikingas es un tanto oscuro debido a la falta de registros escritos. Sin embargo, se cree que se desarrollaron a partir de sistemas de escritura aún más antiguos utilizados por las tribus germánicas y escandinavas. Algunos investigadores sugieren que las runas podrían tener sus raíces en alfabetos mediterráneos como el etrusco o el griego. El origen de las runas vikingas está envuelto en el misterio y la antigüedad, pero su legado perdura como un recordatorio tangible de la rica historia y la profunda espiritualidad de los antiguos pueblos germánicos y escandinavos.</p>
